deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: nginx1
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: omriv/nginx_dl
          ports:
            - containerPort: 80
