service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: nginx1
spec:
  selector:
    app: nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
